# ncurses-pymodoro

./: README.md  main.py  number_design.py  numbers_design.py  pomodoro.py  pyproject.toml  requirements.txt
ncurses_pymodoro/: main.py
pomodoro/: main.py  number_design.py
