[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-pomodoro"
version = "0.1.0"
description = "A terminal-based Pomodoro timer using curses"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "windows-curses; platform_system == 'Windows'"
]

[project.scripts]
pomodoro = "pomodoro.main:main"
